k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
